# auto_tmpdir

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  auto_tmpdir.c  auto_tmpdir_config.h.in  fs-utils.c  fs-utils.h
cmake/: auto_tmpdir.spec.in  slurm-version-check.c
cmake/cpack-formats/: DEB  RPM
